--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@aws-amplify/ui-angular": "^5.0.30",
     "@aws-sdk/client-cognito-identity-provider": "^3.682.0",
     "aws-amplify": "^6.8.0",
+    "flowbite": "^2.5.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -32,6 +33,7 @@
     "@aws-amplify/backend": "^1.0.4",
     "@aws-amplify/backend-cli": "^1.1.1",
     "@types/jasmine": "~5.1.0",
+    "autoprefixer": "^10.4.20",
     "aws-cdk": "^2.137.0",
     "aws-cdk-lib": "^2.137.0",
     "constructs": "^10.3.0",
@@ -42,6 +44,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
     "tsx": "^4.7.2",
     "typescript": "^5.4.5"
   }
